--- a/net-firewall-simulator.cabal
+++ b/net-firewall-simulator.cabal
@@ -28,6 +28,7 @@ library
       Common
       Firewall
       Lib
+      Monads
       Parse
   other-modules:
       Paths_net_firewall_simulator
@@ -37,7 +38,9 @@ library
   build-depends:
       array
     , base >=4.7 && <5
+    , containers
     , ip
+    , mtl
     , text
   default-language: Haskell2010
 
@@ -53,7 +56,9 @@ executable net-firewall-simulator-exe
   build-depends:
       array
     , base >=4.7 && <5
+    , containers
     , ip
+    , mtl
     , net-firewall-simulator
     , text
   default-language: Haskell2010
@@ -69,7 +74,9 @@ test-suite net-firewall-simulator-test
   build-depends:
       array
     , base >=4.7 && <5
+    , containers
     , ip
+    , mtl
     , net-firewall-simulator
     , text
   default-language: Haskell2010
