Now multiple in/out interfaces can be provided in chain rules

--- a/net-firewall-simulator.cabal
+++ b/net-firewall-simulator.cabal
@@ -29,6 +29,7 @@ library
       Firewall
       FirewallParser
       Monads
+      PrettyPrinter
   other-modules:
       Paths_net_firewall_simulator
   hs-source-dirs:
