--- a/net-firewall-simulator.cabal
+++ b/net-firewall-simulator.cabal
@@ -41,6 +41,7 @@ library
     , containers
     , ip
     , mtl
+    , prettyprinter
     , text
   default-language: Haskell2010
 
@@ -60,6 +61,7 @@ executable net-firewall-simulator-exe
     , ip
     , mtl
     , net-firewall-simulator
+    , prettyprinter
     , text
   default-language: Haskell2010
 
@@ -78,5 +80,6 @@ test-suite net-firewall-simulator-test
     , ip
     , mtl
     , net-firewall-simulator
+    , prettyprinter
     , text
   default-language: Haskell2010
