--- a/net-firewall-simulator.cabal
+++ b/net-firewall-simulator.cabal
@@ -39,6 +39,7 @@ library
       array
     , base >=4.7 && <5
     , containers
+    , haskeline
     , ip
     , mtl
     , prettyprinter
@@ -58,6 +59,7 @@ executable net-firewall-simulator-exe
       array
     , base >=4.7 && <5
     , containers
+    , haskeline
     , ip
     , mtl
     , net-firewall-simulator
@@ -77,6 +79,7 @@ test-suite net-firewall-simulator-test
       array
     , base >=4.7 && <5
     , containers
+    , haskeline
     , ip
     , mtl
     , net-firewall-simulator
